# audio_bridge

./: .gitignore  Cargo.toml  Cargo.toml.old  README.md  adb.sh  android.sh  android_a.sh  apk.sh  audio_bridge.service  audio_bridge.txt  audio_bridge_final.apk.idsig  audio_bridge_unsigned.apk  build.rs  compila_x86_64.sh  config.json  config.json.bak  config.toml  control.tar.xz  data.tar.xz  key.sh  pub.sh  rpi.sh
build_apk/: AndroidManifest.xml
deps_arm64/usr/lib/aarch64-linux-gnu/pkgconfig/: alsa.pc
rpi_libs/: opus.deb
rpi_pc/: alsa.pc
src/: gui.rs  main.rs
