[package]
name = "audio_bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audio_bridge"
path = "src/main.rs"

[lib]
name = "audio_bridge"
path = "src/main.rs"
#crate-type = ["cdylib", "rlib"]

[features]
default = ["gui"]
gui = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ringbuf = "0.3"
rand = "0.8"
base64 = "0.22" 
boringtun = "0.6"
smoltcp = { version = "0.11", default-features = false, features = ["medium-ip", "proto-ipv4", "socket-udp"] }


# --- SEZIONE PC (Windows / Linux x86_64) ENTRA DI DEFAULT CON LA GUI ---
[target.'cfg(not(target_os = "android"))'.dependencies]
opus = "0.3.1"
cpal = "0.15"
machine-uid = "0.3"
eframe = "0.27"
egui_plot = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] }

# --- SEZIONE ANDROID ---
[target.'cfg(target_os = "android")'.dependencies]
cpal = "0.15" 
eframe = { version = "0.27", features = ["android-native-activity"] }
android-activity = { version = "0.5.2", features = ["native-activity"] }
winit = { version = "0.29.15", features = ["android-native-activity"] }

[patch.crates-io]
android-activity = { git = "https://github.com/rust-mobile/android-activity", rev = "v0.5.2" }

[build-dependencies]
winres = "0.1"

